# lazydata

./: README.md  pyproject.toml
src/lazydata/: benchmark.py  cml.py  fs.py  funcache.py  plotting.py  tableformatter.py  tabular.py  text.py
tests/: test_funcache.py  test_hash_value.py  test_tableformatter.py
